<resources>
    <string name="app_name">Maintainenator</string>
    <string name="menu_settings">Settings</string>
    <string name="description">What is broken?</string>
    <string name="picture_description">Issue picture</string>
    <string name="address">Where is it?</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="submit">Submit</string>
    <string name="clip">Clip</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="default_latitude">0.0</string>
    <string name="default_longitude">0.0</string>
    <string name="post_url">http://maintain-e-nator.herokuapp.com/api/v1/trackings/</string>
    <string name="local_url">http://192.168.2.17:5000/api/v1/trackings/</string>
    <string name="google_map_url">http://maps.googleapis.com/maps/api/geocode/json?latlng=</string>
    <string name="json_address_tag">formatted_address</string>
    <string name="json_array_tag">results</string>
    <string name="my_reports">Submit History</string>

    <string name="main_heading">Maintain-e-nator</string>
    <string name="title_activity_main">Maintainenator</string>
    <string name="create_button_text">Create</string>
    <string name="my_reports_button_text">My Reports</string>
    <string name="settings_button_text">Settings</string>
    <string name="about_button_text">About</string>
    <string name="title_activity_display_create_form">Create a Tracking</string>

    <string name="settings">Settings</string>
    <string name="local_dev">local_dev?</string>
    <string name="local_dev_description">Connection to localhost server.</string>
    <string name="username">username</string>
    <string name="username_description">Username for connecting server.</string>
    <string name="password">password</string>
    <string name="password_description">Password for connecting server.</string>
    <string name="save_history">Save history</string>
    <string name="save_history_description">Save submitted history locally.</string>

    <string name="indoor">Indoor</string>
    <string name="outdoor">Outdoor</string>
    <string name="floor">FLOOR</string>
    <string name="room">RM</string>
    <string name="room_hint">101?</string>
    <string name="location_optional">More specific location? (Optional)</string>
    <string-array name="buildings">
        <item>Davis Hall</item>
        <item>Bell Hall</item>
        <item>Capen Hall</item>
    </string-array>
    <string-array name="photo_action">
        <item>Camera</item>
        <item>Gallery</item>
        <item>Delete</item>
    </string-array>
    <string name="full_photo">full-size photo</string>
    <string name="map_button">Map</string>
    <string name="mapview">Map</string>
    <string name="login_button">Login with Google</string>
    <string name="nothank_button">Eh, Maybe Later</string>
    <string name="welcome">Welcome</string>
    <string name="detail_report_delete">DELETE</string>
    <string name="audio_record">Record an audio message</string>
    <string name="record">Hold to Speak</string>
    <string name="about_info">About</string>
</resources>