<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <CheckBoxPreference
        android:key="dev_mode"
        android:title="@string/local_dev"
        android:summary="@string/local_dev_description"
        android:defaultValue="true" />
    <EditTextPreference
        android:key="username"
        android:title="@string/username"
        android:summary="@string/username_description"
        android:defaultValue="" />
    <EditTextPreference
        android:key="password"
        android:title="@string/password"
        android:summary="@string/password_description"
        android:inputType="textPassword"
        android:defaultValue="" />
    <CheckBoxPreference
        android:key="save_history"
        android:title="@string/save_history"
        android:summary="@string/save_history_description"
        android:defaultValue="true" />
</PreferenceScreen>