<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <TextView
        android:id="@+id/bssid"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="#19AD23"
    />

    <TextView
        android:id="@+id/geo"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="#FF0000"
    />

    <EditText
        android:id="@+id/description"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:hint="@string/description"
        />

    <EditText
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:paddingTop="10dp"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/latitude"
            />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/longitude"
            />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:id="@+id/latitude"
            android:text="@string/default_latitude"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/longitude"
            android:text="@string/default_longitude"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            />
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:text="@string/submit"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        />
</LinearLayout>