<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp" >

    <TextView
        android:id="@+id/bssid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:gravity="center_horizontal|center_vertical"
        android:background="#19AD23" />

    <TextView
        android:id="@+id/path"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:gravity="center_horizontal|center_vertical"
        android:background="#AA66CC"
     />

    <EditText
        android:id="@+id/outdoor_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/description" />

    <EditText
        android:id="@+id/outdoor_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:hint="@string/address"
        android:paddingTop="10dp" />

<!-- Latitude & Longitute label
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#33B5E5"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="#FFFFFF"
            android:text="@string/latitude" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="#FFFFFF"
            android:text="@string/longitude" />
    </LinearLayout>
-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#33B5E5"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/outdoor_latitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/default_latitude" />

        <TextView
            android:id="@+id/outdoor_longitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/default_longitude" />
    </LinearLayout>

    <ImageView
        android:id="@+id/outdoor_image_canvas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="3.88"
        android:background="#8EE0FF"
        android:contentDescription="@string/picture_description"
       />

    <RelativeLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <Button
            android:id="@+id/outdoor_submit"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#99CC00"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/submit"
        />
    </RelativeLayout>
</LinearLayout>