<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:animateLayoutChanges="true" >

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/welcome"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="#FF4444"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="#FFFFFF"/>

    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/main_heading"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:paddingLeft="4dp"
        android:paddingRight="3dp"
        android:background="#EEEEEE"
        android:textSize="36sp"
        android:textColor="#99CC00"/>
    -->

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:src="@drawable/logo_heading"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/create_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/create_button_text"
            android:background="@color/darker_blue"
            android:layout_marginRight="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="6dp"
            android:textColor="#FFFFFF"
            android:drawableTop="@drawable/create_new"
            android:textSize="16sp" />

        <Button
            android:id="@+id/my_reports_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/my_reports_button_text"
            android:background="#99CC00"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="6dp"
            android:textColor="#FFFFFF"
            android:drawableTop="@drawable/collection"
            android:textSize="16sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/settings_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/settings_button_text"
            android:background="#AA66CC"
            android:layout_marginRight="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="6dp"
            android:textColor="#FFFFFF"
            android:drawableTop="@drawable/settings"
            android:textSize="16sp"
            />

        <Button
            android:id="@+id/about_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/about_button_text"
            android:background="#FFBB33"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp"
            android:paddingBottom="6dp"
            android:textColor="#FFFFFF"
            android:drawableTop="@drawable/dev"
            android:textSize="16sp"
            />
    </LinearLayout>
</LinearLayout>